--- a/html-css-js/css/index.css
+++ b/html-css-js/css/index.css
@@ -27,16 +27,6 @@ html, body {
 }
 
 }
-.container2 {
-  z-index: 5;
-  background-color: #9191E9;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100vw;
-  height: 100vh;
-  z-index: 9999 ;
-}
 
 .popup {
  
@@ -61,8 +51,8 @@ html, body {
   right: -100vh;
   display: flex;
   align-items: center;
-  max-width: 800px;
-  max-height: 600px;
+  /* max-width: 800px;
+  max-height: 600px; */
   width: 60%;
   height: 80%;
   background-color: #fff;
