--- a/html-css-js/css/style2.css
+++ b/html-css-js/css/style2.css
@@ -619,6 +619,7 @@ nav.fill ul li a:hover:after {
 	margin: auto !important;
 }
 .user_content{
+	text-align: center !important;
 	flex-direction: column;	
 	width: 100% !important;
 }
